--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "framer-motion": "^11.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.13.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
