--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-intersection-observer": "^9.13.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
