--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.1",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.14.1",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
