--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
     "react-loader-spinner": "^6.1.6",
@@ -40,5 +41,9 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
-  }
+  },
+  "description": "<<<<<<< HEAD\r # React + Vite",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
