--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
