--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/material": "^5.16.4",
+    "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
@@ -32,7 +32,8 @@
     "react-router-dom": "^6.25.1",
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.14.1",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "sweetalert2": "^11.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
