--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.5",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
