--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.17.1",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
@@ -39,7 +41,8 @@
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.14.1",
     "react-typed": "^2.0.12",
-    "sweetalert2": "^11.12.3"
+    "sweetalert2": "^11.12.3",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
